# marvel-characters

./: databricks.yml  example_payload.json  project_config_marvel.yml  pyproject.toml
demo_artifacts/: logged_model.json
downloaded_artifacts/demo_artifacts/: logged_model.json  mlflow_experiment.json  run_info.json
notebooks/: lecture3.mlflow_experiment_tracking.py  lecture4.train_register_basic_model.py  lecture4.train_register_custom_model.py  lecture6.ab_testing.py  lecture6.deploy_model_serving_endpoint.py
